--- a/package.json
+++ b/package.json
@@ -2,20 +2,21 @@
   "name": "hammeringkeys-nextjs-firebase-blog",
   "private": true,
   "scripts": {
-    "dev": "write_password='itbelikedat' next dev",
+    "dev": "next dev",
     "build": "next build",
-    "start": "write_password='itbelikedat' next start",
+    "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@firebase/storage": "^0.9.1",
     "@types/material-ui": "^0.21.12",
     "@types/react": "^17.0.38",
     "@types/uuid": "^8.3.4",
     "firebase": "^9.6.4",
+    "fs": "^0.0.1-security",
     "next": "12.0.8",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-markdown": "^8.0.0",
     "typescript": "^4.5.5",
     "uuid": "^8.3.2"
   },
